hphp/hack/test/typecheck/reified_generics/constructor_parameters.php.exp
File "constructor_parameters.php", line 10, characters 3-17:
  T
  where T as \A
File "constructor_parameters.php", line 12, characters 3-17:
  T
  where T as \A
File "constructor_parameters.php", line 11, characters 18-24:
Invalid argument (Typing[4110])
  File "constructor_parameters.php", line 6, characters 38-40:
  This is an int
  File "constructor_parameters.php", line 11, characters 18-24:
  It is incompatible with a string
